# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-07 18:27:52 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-10

    Summary:
      documentation, updating STL chapter
    Revision:
      itools--main--0.11--patch-10


    new files:
     doc/.arch-ids/stl.dia.id doc/stl.dia

    modified files:
     Changelog doc/Makefile doc/stl.tex


2005-10-05 11:08:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-9

    Summary:
      merge new setup from herve (#105)
    Revision:
      itools--main--0.11--patch-9

    Patches applied:
    
     * herve@oursours.net--public/itools--setup--0.11--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.11--patch-2
    
     * herve@oursours.net--public/itools--setup--0.11--patch-1
       update setup.py to Python 2.4 API and capabilities.
    
     * herve@oursours.net--public/itools--setup--0.11--patch-2
       append missing and new files to the manifest.
    
     * herve@oursours.net--public/itools--setup--0.11--patch-3
       use a fixed build_py instead of hacking file names.
    

    modified files:
     Changelog MANIFEST.in setup.py

    new patches:
     herve@oursours.net--public/itools--setup--0.11--base-0
     herve@oursours.net--public/itools--setup--0.11--patch-1
     herve@oursours.net--public/itools--setup--0.11--patch-2
     herve@oursours.net--public/itools--setup--0.11--patch-3


2005-10-02 19:19:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-8

    Summary:
      add the Changelog file (forgotten)
    Revision:
      itools--main--0.11--patch-8


    new files:
     .arch-ids/Changelog.id Changelog


2005-10-02 19:18:57 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-7

    Summary:
      fix the Changelog
    Revision:
      itools--main--0.11--patch-7


    removed files:
     .arch-ids/Changelog.id Changelog


2005-10-02 19:18:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-6

    Summary: